--- a/styles/contact.css
+++ b/styles/contact.css
@@ -126,14 +126,21 @@ a.active, .menu li a:hover {
                              /       HERO CONTAINER        /
                             /----------------------------*/
 #hero {
+  width: 100%;
   position: relative;
   padding: 0;
   margin: 0;
-  height: 500px;
+  height: auto;
 }
-#hero img {
+#hero .hero__img {
+  width: inherit;
+  height: 450px;
+}
+.hero__img img {
+  width: 100%;
   object-fit: cover;
   height: 100%;
+  filter: brightness(25%);
 }
 .hero__container {
   width: 90%;
@@ -158,22 +165,32 @@ a.active, .menu li a:hover {
     margin-top: 50px;
     text-shadow: 2px 2px 2px black;
 }
-.hero__container .hero__anchor {
-  padding: 15px 35px;
+#hero .hero__btn {
+  width: 250px;
+  height: 50px;
   background-color: #fff;
   border: 1px solid brown;
   text-align: center;
-  font-size: 1.5em;
   cursor: pointer;
-  color: #fa5600;
   border-radius: 27px;
-  display: inline-block;
+  display: block;
   margin-top: 50px;
   outline: 0;
+  left: 400px;
+  position: absolute;
+  top: 300px;
+  -webkit-box-shadow: 0px 8px 4px -2px rgba(0,0,0,0.24);
   box-shadow: 0px 8px 4px -2px rgba(0,0,0,0.24);
 }
+.hero__btn a {
+  font-size: 2em;
+  color: #fa5600;
+  font-weight: 800;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
 
-/**/
+/*  ALPHA SECTION STARTING NOW  */
 .alpha__top-container {
   position: relative;
   background: #002400;
