--- a/styles/bloggers.css
+++ b/styles/bloggers.css
@@ -21,9 +21,50 @@ ul,
 ol {
    list-style: none;
 }
+h1 {
+  font-size: 3rem;
+}
+h2 {
+  font-size: 2.5rem;
+}
+h3 {
+  font-size: 2rem;
+}
+h4 {
+  font-size: 1.5rem;
+}
+p {
+  font-size: 1.2rem;
+}
 img {
-  width: 100%;
   overflow-x: hidden;
+}
+.btn {
+  display: block;
+  width: 250px;
+  height: 60px;
+  border-radius: 100px;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  background: #0082e6;
+  -webkit-box-shadow: inset 3px 3px black, 0px 8px 4px -2px rgba(0, 0, 0, 0.24);
+  box-shadow: inset 3px -3px 3px black, 0px 8px 4px -2px rgba(0,0,0,0.24);
+}
+.btn .btn-a {
+  font-size: 1.5em;
+  text-transform: uppercase;
+  color: whitesmoke;
+  letter-spacing: 1px;
+}
+.btn-primary:hover {
+  background: #0041e6;
+  transition: background 0.3s ease-in-out;
+}
+.container {
+  max-width: 1200px;
+  width: 90%;
+  margin: auto;
 }
  body {
    text-align: center;
@@ -71,13 +112,13 @@ img {
   font-size: 1em;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-weight: 600;
-   color: #fa5600;
+   color: antiquewhite;
    text-transform: uppercase;
    text-align: center;
    transition: color .3s linear;
 }
 a.active, .menu li a:hover {
-  border-bottom: 3px solid crimson;
+  border-bottom: 3px solid orangered;
   padding-bottom: 3px;
 }
 .menu li:nth-of-type(6) {
@@ -115,6 +156,7 @@ a.active, .menu li a:hover {
      top: 100px;
      left: 0;
      z-index: 12;
+     transition: all 0.4s ease-in-out;
    }
    #chech {
      opacity: 0;
@@ -128,110 +170,107 @@ a.active, .menu li a:hover {
                                      /         END OF THE HEADER            /
                                     /-------------------------------------*/
 #hero {
-  width: 100%;
+  min-height: 100vh;
+  background: linear-gradient(
+      rgba(240, 240, 240, 0.144),
+      rgba(255, 255, 255, 0.336)
+    ),
+     url(../img/Our-costumer-main-pic.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.hero {
+  padding: 30px;
   position: relative;
-  height: 450px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
-
-#hero img {
-  width: 100%;
-  position: relative;
-  height: 100%;
-   object-fit: cover;
+#hero-btn {
+  display: block;
+  margin-top: 200px;
 }
-.hero__container {
-  width: 90%;
-  margin: 0 auto;
-}
-.hero__container .hero__btn {
-  border: none;
-  width: 200px;
-  height: 60px;
-  background: #0082e6;
-  text-align: center;
-  outline: 0;
-  cursor: pointer;
-  border-radius: 7px;
-  position: absolute;
-  top: 200px;
-  right: 50px;
-  box-shadow: 0px 8px 4px -2px rgba(0,0,0,0.24);
-}
-.hero__btn .hero__anchor {
-  color: white;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  font-weight: 700;
-  text-decoration: none;
-}
-.hero__container p {
+.hero p {
   font-size: 1.5em;
   color: azure;
-  position: absolute;
-  top: 350px;
-  right: 50px;
+  margin-top: 40px;
+  text-shadow: 2px 2px 0px black;
 }
-.hero__container h3 {
+.hero h3 {
   font-size: 2em;
   color: #cdc5da;
   font-weight: 600;
-  position: absolute;
-  top: 400px;
-  right: 50px;
+  margin-top: 40px;
+  text-shadow: 2px 2px 0px black;
 }
 
 
 /*  ALPHA   ALPHA ALPHA   ALPHA   */
-.alpha {
-  position: relative;
+#alpha {
   height: auto;
   padding: 0;
-  margin: 0;
+  background-color: #f0f0f0;
 }
-.alpha__container {
-   width: 90%;
-   position: inherit;
-   margin: auto;
-   border: none;
+.alpha {
+  padding: 0;
+  text-align: start;
 }
 .alpha__head {
   width: 100%;
-  position: relative;
-  height: 200px;
+  padding: 30px;
   border-top: 1px solid blue;
 }
 .alpha__head h1 {
   font-size: 2.5em;
   color: #00004b;
-  margin: 50px auto;
 }
 .alpha__head h1 span {
-  border-bottom: 5px solid #fa5600;
+  border-bottom: 5px solid #fa5900;
 }
 
-             /*  SHOW TIME SECTION  */
-.show__time {
+  /*  SHOW TIME SECTION  */
+.alpha__content {
   text-align: start;
+  padding: 10px;
+  border: none;
   display: flex;
 }
-.show__time .shows {
+.showtime__left {
    width: 50%;
    border: none;
+   line-height: 1.15;
 }
-.shows h4 {
+.showtime__left h4 {
   color: #004400;
   margin-bottom: 10px;
 }
-.shows h2 {
-  font-size: 1.5em;
+.showtime__left h2 {
   color: #0082e6;
   margin-bottom: 10px;
 }
-.shows p {
+.showtime__left p {
   margin-bottom: 15px;
 }
-.shows .shows__anchor {
+.showtime__left .showtime-a{
   color: #fa5600;
+  font-style: italic;
+}
+.shows {
+  height: 400px;
+}
+
+.showtime__img {
+  width: 50%;
+}
+.showtime__img img {
+  display: block;
+  width: 90%;
+  object-fit: cover;
+  margin: 100px 0px 50px 40px;
+  border-radius: 7px;
+  -webkit-box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.24);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.24);
 }
 
 /*   SHOWS RIGHT SECTION    */
@@ -253,75 +292,93 @@ a.active, .menu li a:hover {
     left: 110px;
 }
 
-/**/
-.betta {
-  position: relative;
+                                        /*---------------------------------------/
+                                       /           BETTA SECTION BELLOW         /
+                                      /---------------------------------------*/
+#betta {
+  width: 100%;
+  background-color: wheat;
   height: auto;
-  padding: 100px 0px;
-  margin: 0;
-  background: #f9f9f9;
-}
-.betta__container {
-  border: 1px solid brown;
-  width: 90%;
-  margin: auto;
-  background-color: #fff;
   padding: 0;
-  height: 600px;
-  display: flex;
+  margin: 0;
 }
-.betta__menu-left {
-  border-right: 1px solid brown;
-  width: 50%;
-  height: 100%;
-}
-.betta__menu-left .betta__left {
-  background: #006060;
-  height: 70px;
-  padding-top: 10px;
-}
-.betta__left h2,
-.betta__left p {
-  color: white;
-}
-.betta__menu-left .betta__left-one {
-  border-bottom: 1px solid brown;
-  height: 100px;
+.betta {
+  border: none;
   position: relative;
-  padding-top: 20px;
+  height: 900px;
+  padding: 80px 0px;
+  display: flex;
+  justify-content: space-between;
 }
- .betta__left-one h2 {
-  font-size: 3rem;
-  color: #0082e6;
+.betta_card {
+  width: 48%;
+  border: 1px solid rgba(0, 0, 0, 0.24);
+  height: 100%;
+  border-top-left-radius: 27px;
+  border-top-right-radius: 27px;
+  background-color: gainsboro;
+  box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.24), 0px 30px 50px -15px rgba(0, 0, 0, 0.24);
 }
-.betta__left-one span {
-  font-size: 1.3em;
-  color: #9a9a9a;
-  position: absolute;
-  top: 29px;
-  left: 180px;
+.betta_headed {
+  background: #006060;
+  border-bottom: 1px solid #006080;
+  color: whitesmoke;
+  padding: 20px;
+  border-top-left-radius: 27px;
+  border-top-right-radius: 27px;
 }
-.betta__menu-left .betta__menu {
-  list-style: circle;
+.betta_headed h2 {
+  font-size: 2rem;
+  text-transform: capitalize;
+}
+.betta_prices {
+  background-color: #cdc5da;
+  border-bottom: 1px solid maroon;
+  color: #fa6700;
+  padding: 15px;
+}
+.betta_body {
+  background-color: inherit;
+  border: none;
+  height: max-content;
+  color: maroon;
+  border: none;
+}
+
+.betta_body .betta__menu {
   text-align: start;
-  padding: 30px 0px;
+  list-style: square;
+  margin-left: 30px;
+  margin-top: 60px;
+  margin-bottom: 90px;
 }
-.betta__menu li{
-  color: green;
-  padding: 1em;
-  margin-left: 40px;
+
+.betta_body .betta__menu li {
+  padding: 0px;
+  line-height: 2.6;
+  color: #005100;
 }
-.betta-a {
+.betta_body .betta-a {
   padding: 10px 25px;
-  background-color: orange;
+  background: orange;
   text-align: center;
-  font-size: 1em;
-  color: brown;
-  text-transform: uppercase;
+  border: 1px solid maroon;
+  cursor: pointer;
+  outline: none;
+  color: whitesmoke;
   border-radius: 5px;
-  letter-spacing: 1px;
-  -webkit-box-shadow: 0px 6px 5px rgba(0,0,0,0.24);
-  box-shadow: 0px 6px 5px rgba(0,0,0,0.24);
+  box-shadow: inset 3px -3px 3px black, 0px 5px 10px rgba(0, 0, 0, 0.24);
+}
+@media screen and (max-width: 480px){
+  .betta {
+      height: auto;
+      flex-direction: column;
+  }
+  .betta .betta_card {
+      width: 100%;
+      padding-bottom: 2em;
+      margin-bottom: 2em;
+  }
 }
 
                           /*-------------//  IMAGEN MODAL  //-------------------- */
@@ -354,7 +411,7 @@ a.active, .menu li a:hover {
 }
 
 .gallery li {
-  border: 5px solid magenta;
+  border: 5px solid rgba(0, 0, 0, 0.24);
 	margin: 5px;
   border-radius: 7px;
   box-shadow: 0px 8px 4px -2px rgba(0,0,0,0.24);
@@ -413,7 +470,7 @@ a.active, .menu li a:hover {
 }
 
 .imagen img {
-	width: 500px;
+	width: 700px;
 	height: 100%;
 	max-width: 100%;
 	border: 7px solid #fff;
@@ -437,23 +494,23 @@ a.active, .menu li a:hover {
 
 
 /* GAMMA SECTION   GAMM SECTION  */
-.gamma {
+#gamma {
   position: relative;
   background-color: #f7f7f7;
   margin: 0px auto;
   height: auto;
   padding-top: 100px;
 }
-.gamma__container {
+.gamma {
   width: 90%;
   margin: auto;
   position: inherit;
-  height: 600px;
+  height: 700px;
   border: none;
   display: flex;
   justify-content: space-between;
 }
-.gamma__container img {
+.gamma img {
   width: 45%;
   
   height: 400px;
@@ -462,7 +519,7 @@ a.active, .menu li a:hover {
   box-shadow: 0px 30px 50px -15px rgba(0,0,0,0.24);
   margin-right: 0px;
 }
-.gamma__container .gamma__right {
+.gamma .gamma__right {
   border: none;
   text-align: start;
   width: 50%;
@@ -509,33 +566,34 @@ a.active, .menu li a:hover {
   font-size: 1.5em;
 }
 
-/*   STRAIGT TO THE TOP N */
+/*  STRAIGHT TO THE TOP   */
 .to__top {
   width: 50px;
   height: 50px;
   background: rgba(0,0,0,0.24);
-  border: 2px solid cyan;
+  border: none;
   text-align: center;
   border-radius: 50%;
-  padding-top: 8px;
+  cursor: pointer;
+  outline: none;
+  padding-top: 5px;
   z-index: 12;
   position: fixed;
-  right: 2em;
+  right: 3em;
   bottom: 3em;
 }
-.to__top .top__anchor {
+.to__top .to-top-a {
+  font-size: 2em;
   color: cyan;
-  font-size: 1.5em;
 }
+
+/*---------------//---------------------//--------------------------  */
 /*  FOOTER      FOOOTER        FOOTER       FOOTER      FOOOTER      */
-footer {
+#footer {
   background: #212121;
   clear: both;
 }
-.footer__container {
-  position: relative;
-  width: 90%;
-  margin: 0px auto;
+.footer {
   height: auto;
   padding: 100px 0px;
   display: flex;
@@ -562,18 +620,18 @@ footer {
    position: relative;
    padding-bottom: 100px;
 }
-.footer_social-link a {
-  font-size: 1.2em;
-  border: none;
-  outline: 0;
-  color: whitesmoke;
-  border-radius: 4px;
-  text-transform: capitalize;
-  background: lightcoral;
-  cursor: pointer;
-  padding: 10px 12px;
-  text-align: center;
-  margin: 0px 7px;
+.footer_social-link img {
+   display: inline-block;
+   margin-right: 20px;
+   width: 40px;
+   height: 40px;
+   border: none;
+   outline: none;
+   filter: hue-rotate(120deg);
+}
+.footer_social-link img:hover {
+  filter: grayscale(1);
+  transform: scale(1.03);
 }
 
 /*  FOOTER RIGHT  */
@@ -610,9 +668,8 @@ footer {
 }
 /*  ULTIMO HOMBRE  */
 .ultimo__hombre {
-  position: relative;
-  background: #000;
-  padding: 15px;
+  background: #191919;
+  padding: 10px;
 }
 .ultimo__hombre small {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande';
@@ -634,28 +691,27 @@ footer {
     float: none;
    }
    #hero {
-    height: auto;
-      padding-bottom: 2em;
+     height: auto;
    }
-   .hero__container .hero__btn {
-      margin-bottom: 2em;
+   .hero {
+    font-size: 65%;
    }
 
    /* ALPHA SECTION  */
-   .alpha_head {
+   .alpha__content {
      height: auto;
-     padding-bottom: 1em;
+     padding: 1em;
+     flex-direction: column;
    }
-   .alpha_head h1 {
+   .alpha__content h1 {
      margin-bottom: 1em;
      font-size: 1.7em;
    }
    /*  SHOWS TIME SECTION  */
-   .show__time {
-    display: block;
-   }
-   .show__time .shows {
-    width: 100%;
+   .showtime__left,
+  .showtime__img {
+     text-align: right;
+     width: 100%;
    }
    .shows__right .shows__anchor-right {
      position: absolute;
@@ -679,15 +735,7 @@ footer {
 }
 /*  HERO SECTION  */
 @media (max-width: 768px) {
-  .hero__container .hero__btn {
-    top: 18em;
-  }
-  .hero__container p {
-    top: 1em;
-  }
-  .hero__container h3 {
-    top: 2em;
-  }
+  /*  BETTA CONTAAINER  */
   .betta__container {
     height: 100%;
     padding-bottom: 2em;
@@ -711,6 +759,53 @@ footer {
   .gamma__right h2 {
     display: block;
     margin-top: 1em;
+  }
+
+}
+
+@media (max-width: 486px) {
+  .container {
+    max-width: 100%;
+    margin: auto;
+  }
+   .hero {
+    height: auto;
+    position: relative;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .hero p {
+    position: static;
+  }
+  .hero h3 {
+    position: static;
+  }
+  #hero-btn {
+    width: 100%;
+    cursor: pointer;
+    vertical-align: middle;
+  }
+  /*  GAMMA SECTION BELLOW  */
+  .gamma {
+    height: auto;
+    flex-direction: column;
+    padding-bottom: 2em;
+  }
+  .gamma img,
+  .gamma .gamma__right {
+    width: 100%;
+  }
+  /* FOOTER  FOOTER  */
+  .footer {
+    height: auto;
+    flex-direction: column;
+  }
+  .footer .footer__item {
+    width: 100%;
   }
 
 }
